[gd_scene load_steps=4 format=2]

[ext_resource path="res://Actors/MobileClaw/Scanner.gd" type="Script" id=1]
[ext_resource path="res://Assets/Images/Scanner.png" type="Texture" id=2]


[sub_resource type="RectangleShape2D" id=1]
resource_local_to_scene = true
extents = Vector2( 1, 5 )

[node name="Scanner" type="Area2D"]
position = Vector2( -16, -512 )
collision_layer = 8
collision_mask = 14
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -1.5 )
texture = ExtResource( 2 )
hframes = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true
[connection signal="area_entered" from="." to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_Area2D_area_exited"]
[connection signal="body_entered" from="." to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Area2D_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
